fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -252,9 +252,6 @@ h3 {
   .navbar-text {
     margin-top: 22px;
   }
-  article {
-    padding-bottom: 50px;
-  }
   .heart-ciclovia {
     margin-top: 0px;
   }
@@ -283,5 +280,14 @@ h3 {
   }
   .thomas {
     margin-right: 5vw;
+  }
+  .site {
+    display: block;
+    flex-flow: none;
+    min-height: 0px;
+  }
+  .site-content {
+    -webkit-flex: 0;
+            flex: 0;
   }
 }
